# IB-Computer-Science-IA

./: README.md  harbringer.py  inventory.csv  main.py  pyproject.toml  sales_data.csv
2024-2025/: BMI_in_OOP.py  area_of_shapes.py  class_temp.py  class_volume.py  csv_review.py  inheritance.py  inheritance_class_average.py  inheritance_person_class.py  prototype_BMI_GUI.py  tkinter_calendar.py  tkinter_quadratic.py  username.py
