[tool.poetry]
name = "Inventory Management and Sales Tracking System"
version = "0.1.0"
description = "Created for the IB Computer Science internal assessment"
authors = ["James Lin <jameslin0703@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
username = "^2.1.0"
pandas = "^2.2.3"
tkcalendar = "^1.6.1"
matplotlib = "^3.9.2"
customtkinter = "^5.2.2"
plotly = "^5.24.1"
numpy = "^2.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"